--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8">
-  <title>Portfólio Antônio</title>
+  <title></title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     body {
